--- a/proposal.tex
+++ b/proposal.tex
@@ -23,6 +23,10 @@ leading candidates in facilitating distributed deployment of LLM training. It
 is timely to make an effort in comparing the performance and scaling efficiency
 of FSDP and DeepSpeed on ALCF machines.
 
+This effort is crucial to ALCF for better supporting users who will be doing 
+distributed LLM trainings on ALCF system. This effort will also benefit the 
+AuroraGPT project. 
+
 \section*{Concrete Tasks}
 \begin{itemize}
     \item Exploring the scope of adopting various parallelization schemes with
